# ViennaGameAILibrary

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_demo_win.bat  run_demo_win.bat
Demo/: CMakeLists.txt
Demo/docs/: Doxyfile
Demo/res/: navmesh.txt
Demo/src/: Timer.h  demo_DecisionTree.cpp  demo_Flocking.cpp  demo_PathFinding.cpp  demo_Pathfinding.cpp  demo_StateMachine.cpp  demo_SteeringBehaviors.cpp  main.cpp
Demo/src/SteeringBehaviors/: demo_Arrive.cpp  demo_Flocking.cpp  demo_PursueAndEvade.cpp  demo_SeekAndFlee.cpp  demo_Wander.cpp
Demo/testing/: test_Arrive.cpp  test_Flocking.cpp  test_MCTSConnectFour.cpp  test_MCTSHex.cpp  test_MCTSTicTacToe.cpp  test_Pathfinding.cpp  test_PursueAndEvade.cpp  test_SeekAndFlee.cpp  test_WanderAndFace.cpp
docs/: Doxyfile
docs/html/: _vienna_game_a_i_library_8hpp.html  _vienna_game_a_i_library_8hpp_source.html  annotated.html  class_v_g_a_i_l_1_1_boid-members.html  class_v_g_a_i_l_1_1_boid.html  class_v_g_a_i_l_1_1_decision_node-members.html  class_v_g_a_i_l_1_1_decision_node.html  class_v_g_a_i_l_1_1_decision_tree-members.html  class_v_g_a_i_l_1_1_decision_tree.html  class_v_g_a_i_l_1_1_flocking-members.html  class_v_g_a_i_l_1_1_flocking.html  class_v_g_a_i_l_1_1_nav_mesh-members.html  class_v_g_a_i_l_1_1_nav_mesh.html  class_v_g_a_i_l_1_1_state-members.html  class_v_g_a_i_l_1_1_state.html  class_v_g_a_i_l_1_1_state_machine-members.html  class_v_g_a_i_l_1_1_state_machine.html  class_v_g_a_i_l_1_1_transition-members.html  class_v_g_a_i_l_1_1_transition.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  md__d_1_2_uni_vie_2_sem_015_2_master_2_vienna_game_a_i_library_2_r_e_a_d_m_e.html  menudata.js  namespace_v_g_a_i_l.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  pages.html  struct_v_g_a_i_l_1_1_node_data-members.html  struct_v_g_a_i_l_1_1_node_data.html  (+10 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  (+21 more)
docs/latex/: _vienna_game_a_i_library_8hpp.tex  _vienna_game_a_i_library_8hpp_source.tex  annotated.tex  class_v_g_a_i_l_1_1_boid.tex  class_v_g_a_i_l_1_1_decision_node.tex  class_v_g_a_i_l_1_1_decision_tree.tex  class_v_g_a_i_l_1_1_flocking.tex  class_v_g_a_i_l_1_1_nav_mesh.tex  class_v_g_a_i_l_1_1_state.tex  class_v_g_a_i_l_1_1_state_machine.tex  class_v_g_a_i_l_1_1_transition.tex  files.tex  index.tex  md__d_1_2_uni_vie_2_sem_015_2_master_2_vienna_game_a_i_library_2_r_e_a_d_m_e.tex  namespace_v_g_a_i_l.tex  namespaces.tex  refman.tex  struct_v_g_a_i_l_1_1_node_data.tex  struct_v_g_a_i_l_1_1_node_data_comparator.tex  struct_v_g_a_i_l_1_1_region.tex  struct_v_g_a_i_l_1_1_region_list.tex  struct_v_g_a_i_l_1_1_vec2f.tex  struct_v_g_a_i_l_1_1_vec2ui.tex
include/: ViennaGameAILibrary.hpp
